--- a/src/Components/layouts/Layouts.module.css
+++ b/src/Components/layouts/Layouts.module.css
@@ -1,10 +1,15 @@
 .container {
-  padding: 0 14px;
+  padding: 0;
   height: 100vh;
   display: grid;
   grid-template-rows: auto 1fr auto;
 
-  margin: 0 auto;
+  margin: 0;
+}
+@media (max-width: 700px) {
+  /* .container {
+    padding: 0px;
+  } */
 }
 .main {
   margin-top: 100px;
@@ -42,10 +47,10 @@
   justify-content: center;
   align-items: center;
   background-color: #2088ff;
-  padding: 15px;
+  padding: 25px;
   border-radius: 50%;
   color: var(--text-color-secondary);
-  bottom: 120px;
+  bottom: 160px;
   right: 25px;
   outline: none;
 }
