--- a/src/Components/home/Home.module.css
+++ b/src/Components/home/Home.module.css
@@ -4,12 +4,17 @@
   gap: 24px;
 }
 
+.wrapper__left,
+.wrapper__right {
+  padding: 20px;
+}
 .wrapper__left__item {
   background-color: var(--background-color-light);
   border-radius: 12px;
   padding: 20px;
   margin-top: 10px;
   box-shadow: var(--box-shadow);
+
   /* border: 1px solid var(--border-color); */
 }
 
@@ -26,7 +31,7 @@
   .wrapper {
     display: grid;
     grid-template-columns: repeat((12, 1fr));
-    gap: 14px;
+    gap: 3px;
   }
 
   .wrapper_left {
@@ -43,6 +48,7 @@
   border-bottom: 1px solid #e0e0e0;
   padding: 10px 0;
   color: var(--text-color-secondary);
+  font-size: 24px;
 }
 
 .stack,
@@ -121,6 +127,7 @@
   gap: 24px;
   color: #4f4f4f;
   font-weight: 500;
+  padding: 5px 20px;
 }
 
 .tools__items h1 {
