--- a/src/Components/experience/Experience.module.css
+++ b/src/Components/experience/Experience.module.css
@@ -17,16 +17,20 @@
 .mute {
   color: #4f4f4f;
   font-weight: 500;
+  font-size: 24px;
+  padding: 10px 0;
 }
 
 .text__700 {
   font-weight: 700;
   margin-top: -4px;
+  font-size: 30px;
 }
 
 .exp {
   color: #4f4f4f;
   font-weight: 500;
+  font-size: 24px;
   margin-top: -4px;
 }
 @media screen and (max-width: 720px) {
