--- a/src/Components/layouts/Layouts.module.css
+++ b/src/Components/layouts/Layouts.module.css
@@ -28,6 +28,10 @@
   padding: 20px;
   color: #4f4f4f;
 }
+.footer > div {
+  font-size: 20px;
+  padding: 5px 0;
+}
 
 .theme_switch {
   border: none;
