--- a/src/Components/experience/Experience.module.css
+++ b/src/Components/experience/Experience.module.css
@@ -15,7 +15,7 @@
 }
 
 .mute {
-  color: #4f4f4f;
+  color: #828282;
   font-weight: 500;
   font-size: 24px;
   padding: 10px 0;
@@ -38,7 +38,7 @@
 }
 
 .exp {
-  color: #4f4f4f;
+  color: #828282;
   font-weight: 500;
   font-size: 24px;
   margin-top: -4px;
