--- a/src/Components/projects/Projects.module.css
+++ b/src/Components/projects/Projects.module.css
@@ -20,7 +20,7 @@
   margin-top: 20px;
 }
 
-.button__flex > button:first-of-type {
+.button__flex > a:first-of-type {
   margin-right: 40px;
 }
 @media screen and (max-width: 889px) {
@@ -64,7 +64,7 @@
     width: 1;
   }
 }
-.button__flex button {
+.button__flex a {
   outline: none;
   background-color: #5c94e1;
   color: #fff;
@@ -75,7 +75,7 @@
   border: none;
 }
 
-.button__flex button:hover {
+.button__flex a:hover {
   background-color: #fff;
   color: black;
   /* border: 1px solid var(--border-color); */
