--- a/src/Components/projects/Projects.module.css
+++ b/src/Components/projects/Projects.module.css
@@ -24,7 +24,9 @@
   font-weight: 500;
   font-size: 24px;
 }
-
+/* .projects__img {
+  width: 60%;
+} */
 @media (min-width: 900px) {
   .projects__img {
     margin-right: 20px;
@@ -33,11 +35,11 @@
 
 .wrapper__right__item__flex__project {
   display: flex;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   align-items: center;
   width: 100%;
   padding: 20px 0;
-  margin: 20px 0;
+  margin: 30px 0;
   border-bottom: 1px solid #e0e0e0;
 }
 
