--- a/src/Components/experience/Experience.module.css
+++ b/src/Components/experience/Experience.module.css
@@ -4,13 +4,16 @@
   width: 100%;
   align-items: center;
   margin-bottom: 20px;
+}
+
+.wrapper__left__item {
   padding: 10px;
   border-bottom: 1px solid #e0e0e0;
 }
 
 .experience__image {
   object-fit: cover;
-  width: 100%;
+
   margin-right: 20px;
 }
 
@@ -19,6 +22,7 @@
   font-weight: 500;
   font-size: 24px;
   padding: 10px 0;
+  text-align: center;
 }
 
 .company {
@@ -34,7 +38,8 @@
 .text__700 {
   font-weight: 700;
   margin-top: -4px;
-  font-size: 30px;
+  font-size: 24px;
+  text-align: center;
 }
 
 .exp {
@@ -42,6 +47,13 @@
   font-weight: 500;
   font-size: 24px;
   margin-top: -4px;
+}
+.achievement {
+  color: #828282;
+  font-weight: 500;
+  font-size: 20px;
+  margin-top: -4px;
+  text-align: left;
 }
 @media screen and (max-width: 720px) {
   .wrapper__left__item__flex {
