--- a/src/Components/home/Home.module.css
+++ b/src/Components/home/Home.module.css
@@ -1,6 +1,6 @@
 .wrapper {
   display: grid;
-  grid-template-columns: repeat((1, 1fr));
+  grid-template-columns: repeat(1, 1fr);
   gap: 24px;
 }
 
@@ -27,20 +27,24 @@
   /* border: 1px solid var(--border-color); */
 }
 
-@media screen and (min-width: 1098px) {
+@media (min-width: 1098px) {
   .wrapper {
     display: grid;
-    grid-template-columns: repeat((12, 1fr));
+    grid-template-columns: 40% 60%;
     gap: 3px;
   }
 
-  .wrapper_left {
+  /* .wrapper__left {
     grid-column: 1 / span 4;
   }
 
-  .wrapper_right {
+  .wrapper__right {
     grid-column: 5 / span 1;
-  }
+  } */
+}
+
+.tools__container {
+  margin: 60px 0;
 }
 
 .name {
@@ -94,9 +98,11 @@
 }
 
 .experience,
-.projects,
 .blog {
   margin-top: 40px;
+}
+.projects {
+  margin-top: 10px;
 }
 .bio {
   width: 100%;
