--- a/src/Components/home/Home.module.css
+++ b/src/Components/home/Home.module.css
@@ -6,7 +6,7 @@
 
 .wrapper__left,
 .wrapper__right {
-  padding: 20px;
+  padding: 20px 10px;
 }
 .wrapper__left__item {
   background-color: var(--background-color-light);
